--- a/nc.html
+++ b/nc.html
@@ -40,8 +40,6 @@
 <body>
 <div id="app"></div>
 <script>
-    let active = 36;
-    let offset = 36;
 
     let items = [
         {name: 'DOS', dir: true},//+0
@@ -138,15 +136,37 @@
         {name: '1WPV2WMF.EX!'},//+90
         {name: '0WPVIEW.EX!'},//+91
     ];
+    let active = 0;
+    let offset = 0;
+    let pane = false;
+    let paneLeft = {
+        items,
+        offset,
+        active
+    };
+    let paneRight = {
+        items,
+        offset,
+        active
+    };
 
-    function render(viewList, active) {
+    function render(paneLeft, paneRight) {
         let app = document.getElementById('app');
+
+        // console.log('render len', items.length, 'o', offset, 'a', active);
 
         //flag1:\u2592
 
         let rows = [];
         for (let i = 0; i < 18; i++) {
-            rows.push([i, viewList[i], 18 + i, viewList[18 + i], 18 * 2 + i, viewList[18 * 2 + i]]);
+            rows.push([
+                i, paneLeft.items[i],
+                18 + i, paneLeft.items[18 + i],
+                18 * 2 + i, paneLeft.items[18 * 2 + i],
+                i, paneRight.items[i],
+                18 + i, paneRight.items[18 + i],
+                18 * 2 + i, paneRight.items[18 * 2 + i],
+            ]);
         }
 
         let fmtName = r => {
@@ -172,6 +192,11 @@
         }
 
 
+        let renderCell = (pane, r, i) =>
+            (pane.paneActive && r[i] == pane.active ? '<span class="blueoncyan">' : '')
+            + fmtName(r[i + 1])
+            + (pane.paneActive && r[i] == pane.active ? '</span>' : '');
+
         app.innerHTML = '<span class="cyanonblue">\u2554' + '\u2550'.repeat(12) + '\u2564'
             + '\u2550'.repeat(12) + '\u2564' + '\u2550'.repeat(12) + '\u2557'
             + '\u2554' + '\u2550'.repeat(38) + '\u2557'
@@ -179,14 +204,26 @@
                 + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2502'
                 + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2502'
                 + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2551')
-            + ('\u2551' + ' '.repeat(38) + '\u2551')
+            + ('\u2551'
+                + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2502'
+                + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2502'
+                + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2551')
 
             + rows.map(r =>
                 ('\n' + '\u2551'
-                    + (r[0] == active ? '<span class="blueoncyan">' : '') + fmtName(r[1]) + (r[0] == active ? '</span>' : '') + '\u2502'
-                    + (r[2] == active ? '<span class="blueoncyan">' : '') + fmtName(r[3]) + (r[2] == active ? '</span>' : '') + '\u2502'
-                    + (r[4] == active ? '<span class="blueoncyan">' : '') + fmtName(r[5]) + (r[4] == active ? '</span>' : '') + '\u2551'
-                    // + ' '.repeat(12) + '\u2502' + ' '.repeat(12) + '\u2551' + '\u2551' + ' '.repeat(38) + '\u2551'
+                    + renderCell(paneLeft, r, 0)
+                    + '\u2502' + renderCell(paneLeft, r, 2)
+                    + '\u2502' + renderCell(paneLeft, r, 4)
+                    + '\u2551'
+
+                    + '\u2551'
+                    + renderCell(paneRight, r, 6)
+                    + '\u2502' + renderCell(paneRight, r, 8)
+                    + '\u2502' + renderCell(paneRight, r, 10)
+                    // + (r[6] == paneRight.active ? '<span class="blueoncyan">' : '') + fmtName(r[7]) + (r[6] == paneRight.active ? '</span>' : '') + '\u2502'
+                    // + (r[8] == paneRight.active ? '<span class="blueoncyan">' : '') + fmtName(r[9]) + (r[8] == paneRight.active ? '</span>' : '') + '\u2502'
+                    // + (r[10] == paneRight.active ? '<span class="blueoncyan">' : '') + fmtName(r[11]) + (r[10] == paneRight.active ? '</span>' : '')
+                    + '\u2551'
                 )
             ).join('')
 
@@ -202,9 +239,17 @@
             // + ('\n' + '\u2551' + ' '.repeat(38) + '\u2551' + '\u2551' + ' '.repeat(38) + '\u2551').repeat(10)
 
             + ('\n' + '\u255f' + '\u2500'.repeat(38) + '\u2562') + ('\u255f' + '\u2500'.repeat(38) + '\u2562')
-            + ('\n' + '\u2551' + fmtName(viewList[active]) + fmtDirOrSize(viewList[active])
-                + fmtDate(viewList[active])
-                + '\u2551') + ('\u2551' + ' '.repeat(38) + '\u2551')
+
+            + ('\n' + '\u2551'
+                + fmtName(paneLeft.items[paneLeft.active])
+                + fmtDirOrSize(paneLeft.items[paneLeft.active])
+                + fmtDate(paneLeft.items[paneLeft.active])
+                + '\u2551') + ('\u2551'
+                + fmtName(paneRight.items[paneRight.active])
+                + fmtDirOrSize(paneRight.items[paneRight.active])
+                + fmtDate(paneRight.items[paneRight.active])
+                + '\u2551')
+
             + '\n' + '\u255a' + '\u2550'.repeat(38) + '\u255d' + '\u255a' + '\u2550'.repeat(38) + '\u255d</span>'
             + '\n' + 'C:\\>_'
             + '\n' + '1<span class="blackondarkcyan">Помощь</span>'
@@ -219,94 +264,89 @@
             + ' ' + '10<span class="blackondarkcyan">Выход </span>';
     }
 
-    render(items.slice(offset, offset + 18 * 3), active);
+    let callRender = () =>
+        render(
+            {
+                items: paneLeft.items.slice(paneLeft.offset, paneLeft.offset + 18 * 3),
+                offset: paneLeft.offset,
+                active: paneLeft.active,
+                paneActive: !pane,
+            },
+            {
+                items: paneRight.items.slice(paneRight.offset, paneRight.offset + 18 * 3),
+                offset: paneRight.offset,
+                active: paneRight.active,
+                paneActive: pane,
+            },
+        );
+    callRender();
+
+    function cursorPgup(pane) {
+        if (pane.active >= 18) {
+            pane.active -= 18;
+        } else if (pane.offset >= 18) {
+            pane.offset -= 18;
+        } else {
+            pane.offset = 0;
+            pane.active = 0;
+        }
+    }
+
+    function cursorPgdn(pane) {
+        if (pane.active < 18 * 2) {
+            pane.active = Math.min(pane.items.length - 1 - pane.offset, pane.active + 18);
+        } else if (pane.offset + 18 <= Math.max(0, pane.items.length - 18 * 3)) {
+            pane.offset += 18;
+        } else {
+            pane.offset = Math.max(0, pane.items.length - 18 * 3);
+            pane.active += pane.items.length - 1 - (pane.offset + pane.active)
+        }
+    }
+
+    function cursorUp(pane) {
+        if (pane.active > 0) {
+            pane.active--;
+        } else if (pane.offset > 0) {
+            pane.offset--;
+        }
+    }
+
+    function cursorDown(pane) {
+        if (pane.offset + pane.active < pane.items.length - 1) {
+            if (pane.active == 18 * 3 - 1) {
+                pane.offset++;
+            } else {
+                pane.active++;
+            }
+        }
+    }
 
     document.addEventListener('keydown', e => {
-        // console.log(e.key);
-        if (['ArrowLeft', 'ArrowRight', 'ArrowDown', 'ArrowUp', '-'].indexOf(e.key) === -1) return;
+        e.preventDefault();
+        console.log('key', typeof e.key, e.key, e.key.length);
+        if (['ArrowLeft', 'ArrowRight', 'ArrowDown', 'ArrowUp', 'Tab', '-'].indexOf(e.key) === -1) return;
         if (e.key == '-') {
-            items = items.slice(0, items.length - 1);
+            paneLeft.items = paneLeft.items.slice(0, paneLeft.items.length - 1);
+        }
+        if (e.key == 'Tab') {
+            pane = !pane;
+            console.log('pane', pane);
         }
         if (e.key == 'ArrowLeft') {
-            if (active < 18) {
-                //check if can add 18
-                if (offset >= 18) {
-                    offset -= 18;
-                    // } else if (offset>0) {
-                    //     let move = 18-offset;
-                    //     console.log('move', move);
-                    // active=0;
-                    // offset=0;
-                    // offset+=18-move;
-                    // active+=move;
-                } else {
-                    offset = 0;
-                    active = 0;
-                }
-            } else {
-                active -= 18;
-            }
+            cursorPgup(pane ? paneRight : paneLeft);
         }
         if (e.key == 'ArrowRight') {
-            let inc = 18;
-            if (offset + active + inc > items.length - 1) {
-                inc = items.length - 1 - (offset + active);
-                // console.log('inc limit len', inc);
-            }
-
-            if (active + inc >= 18 * 3) {
-                // let right = items.length - (offset + 18);
-                let right = items.length - (offset + inc);
-                // if (right >= 18 * 3-15) {
-                if (right >= 18 * 3) {
-                    let incOrig = inc;
-                    offset += inc;
-                    inc = 0;
-                    // console.log('inc limit view offset only', inc, incOrig, right);
-                } else {
-                    let incOffset = 18*3-right,
-                        i2 = 18-incOffset;
-
-                    if (incOffset<15)i2=incOffset;
-
-                    inc = 18 * 3 - 1 - active;
-                    offset+=i2;
-                    console.log('inc limit view both', right, incOffset, i2);
-                    // let incOrig = inc;
-                    // inc = 18 * 3 - 1 - active;
-                    // let incOffset = incOrig - inc;
-                    // offset += incOffset;
-                    // let a = items.length - offset - incOrig,
-                    //     b = 18 * 3 - a,
-                    //     c = 18 - b,
-                    //     d = c - 1;
-                    // offset += d;
-                    // console.log('inc limit view', inc, incOrig, a, b, c, d, incOffset+inc);
-                    //qna 17 39 15 3 2  2
-                    //rbv 16 40 14 4 3  2
-                    //rea 15 41 13 5 4  2
-                }
-            }
-            active += inc;
+            cursorPgdn(pane ? paneRight : paneLeft);
         }
         if (e.key == 'ArrowDown') {
-            if (offset + active < items.length - 1) {
-                if (active == 18 * 3 - 1) {
-                    offset++;
-                } else {
-                    active++;
-                }
-            }
+            cursorDown(pane ? paneRight : paneLeft);
         }
         if (e.key == 'ArrowUp') {
-            if (active > 0) {
-                active--;
-            } else if (offset > 0) {
-                offset--;
-            }
+            cursorUp(pane ? paneRight : paneLeft);
         }
         // console.log('oa', offset, active, items.length)
-        render(items.slice(offset, offset + 18 * 3), active);
+        // render(items.slice(offset, offset + 18 * 3), offset, active);
+        callRender();
     })
 </script>
 </body>
