--- a/nc.html
+++ b/nc.html
@@ -2,10 +2,14 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <style>
+        @font-face {
+            font-family: 'MyWebFont';
+            src: url('http://webdraft.hu/fonts/classic-console/fonts/clacon2.woff2') format('woff2');
+        }
         * {
             background: #000;
             color: rgb(168, 168, 168);
-            font: 14px Menlo;
+            font: 16px MyWebFont, Menlo;
             padding: 0;
             margin: 0;
             border: 0;
@@ -40,7 +44,6 @@
 <body>
 <div id="app"></div>
 <script>
-
     let items = [
         {name: 'DOS', dir: true},//+0
         {name: 'KEYRUS', dir: true},
@@ -51,101 +54,99 @@
         {name: 'Io.sys', flag: 1},
         {name: 'Msdos.sys', flag: 1},
 
-        {name: '123VIEW.EX!'},
-        {name: '4372ANSI.SET'},
-        {name: '8502ANSI.SET'},
-        {name: '8522ANSI.SET'},
-        {name: '8632ANSI.SET'},
-        {name: '8652ANSI.SET'},
-        {name: '8662ANSI.SET'},
-        {name: 'ANSI2437.SET'},
-        {name: 'ANSI2850.SET'},
-        {name: 'ANSI2852.SET'},//+17
-        {name: 'ANSI2863.SET'},//+18
-        {name: 'ANSI2865.SET'},
-        {name: 'ANSI2866.SET'},
-        {name: 'ARCVIEW.EX!'},
-        {name: 'BITMAP.EX!'},
-        {name: 'BUG.NS!'},
-        {name: 'BUNGEE.NS!'},
-        {name: 'CLP2DIB.EX!'},
-        {name: 'DBVIEW.EX!'},
-        {name: 'DRAW2WMF.EX!'},
-        {name: 'DRW2WMF.EX!'},
-        {name: 'EVILEYE.NS!'},
-        {name: 'FACES.NS!'},
-        {name: 'FISH.NS!'},
-        {name: 'FLIP.NS!'},
-        {name: 'ICO2DIB.EX!'},
-        {name: 'INSTALL.CFG'},
-        {name: 'INSTALL.EXE'},
-        {name: 'INSTALLD.EXE'},//+36
-        {name: 'MESSAGE.MS!'},
-        {name: 'MOUSE.NS!'},
-        {name: 'MSP2DIB.EX!'},
-        {name: 'NC.CFG'},
-        {name: 'NC.EXE'},
-        {name: 'NC.FIL'},
-        {name: 'NC.HLP'},
-        {name: 'NC.IC!'},
-        {name: 'NC.INI'},
-        {name: 'NC.MSG'},
-        {name: 'NC5EV'},
-        {name: 'NCCLEAN.EXE'},
-        {name: 'NCCLEAN.INI'},
-        {name: 'NCDD.EX!'},
-        {name: 'NCEDIT.EXE'},
-        {name: 'NCEDIT.MSG'},
-        {name: 'NCFF.EXE'},//+53
-        {name: 'NCFF.HL!'},//+54
-        {name: 'NCFF.MSG'},
-        {name: 'NCLABEL.EX!'},
-        {name: 'NCMAIN.EXE'},
-        {name: 'NCNET.EX!'},
-        {name: 'NCPSCRIP.HD!'},
-        {name: 'NCSF.EX!'},
-        {name: 'NCSI.EX!'},
-        {name: 'NCZIP.EXE'},
-        {name: 'NCZIP.MSG'},
-        {name: 'NC_EXIT.CO!'},
-        {name: 'NC_EXIT.DO!'},
-        {name: 'NORTON.IN!'},
-        {name: 'PACKER.EX!'},
-        {name: 'PACKER.SET'},
-        {name: 'PARAVIEW.EX!'},
-        {name: 'PCT2DIB.EX!'},
-        {name: 'PLAYWAVE.EX!'},//+71
-        {name: 'Q&AVIEW.EX!'},//+72
-        {name: 'RBVIEW.EX!'},
-        {name: 'README.TXT'},
-        {name: 'REFVIEW.EX!'},
-        {name: 'SAVER.EX!'},
-        {name: 'SYMCFG.BIN'},
-        {name: 'TELEMAX.DA!'},
-        {name: 'TELEMAX.EX!'},
-        {name: 'TELEMAX.HL!'},
-        {name: 'TELEMAX.IN!'},
-        {name: 'TELEMAX.NM!'},
-        {name: 'TIF2DIB.EX!'},
-        {name: 'TORNADO.NS!'},
-        {name: 'TORNADO.NS!'},
-        {name: 'TORNADO.NS!'},
-        {name: '4VECTOR.EX!'},
-        {name: '3WHATS.NEW'},
-        {name: '2WPB2DIB.EX!'},//+89
-        {name: '1WPV2WMF.EX!'},//+90
-        {name: '0WPVIEW.EX!'},//+91
+        {name: '123view.ex!'},
+        {name: '4372ansi.set'},
+        {name: '8502ansi.set'},
+        {name: '8522ansi.set'},
+        {name: '8632ansi.set'},
+        {name: '8652ansi.set'},
+        {name: '8662ansi.set'},
+        {name: 'ansi2437.set'},
+        {name: 'ansi2850.set'},
+        {name: 'ansi2852.set'},//+17
+        {name: 'ansi2863.set'},//+18
+        {name: 'ansi2865.set'},
+        {name: 'ansi2866.set'},
+        {name: 'arcview.ex!'},
+        {name: 'bitmap.ex!'},
+        {name: 'bug.ns!'},
+        {name: 'bungee.ns!'},
+        {name: 'clp2dib.ex!'},
+        {name: 'dbview.ex!'},
+        {name: 'draw2wmf.ex!'},
+        {name: 'drw2wmf.ex!'},
+        {name: 'evileye.ns!'},
+        {name: 'faces.ns!'},
+        {name: 'fish.ns!'},
+        {name: 'flip.ns!'},
+        {name: 'ico2dib.ex!'},
+        {name: 'install.cfg'},
+        {name: 'install.exe'},
+        {name: 'installd.exe'},//+36
+        {name: 'message.ms!'},
+        {name: 'mouse.ns!'},
+        {name: 'msp2dib.ex!'},
+        {name: 'nc.cfg'},
+        {name: 'nc.exe'},
+        {name: 'nc.fil'},
+        {name: 'nc.hlp'},
+        {name: 'nc.ic!'},
+        {name: 'nc.ini'},
+        {name: 'nc.msg'},
+        {name: 'nc5ev'},
+        {name: 'ncclean.exe'},
+        {name: 'ncclean.ini'},
+        {name: 'ncdd.ex!'},
+        {name: 'ncedit.exe'},
+        {name: 'ncedit.msg'},
+        {name: 'ncff.exe'},//+53
+        {name: 'ncff.hl!'},//+54
+        {name: 'ncff.msg'},
+        {name: 'nclabel.ex!'},
+        {name: 'ncmain.exe'},
+        {name: 'ncnet.ex!'},
+        {name: 'ncpscrip.hd!'},
+        {name: 'ncsf.ex!'},
+        {name: 'ncsi.ex!'},
+        {name: 'nczip.exe'},
+        {name: 'nczip.msg'},
+        {name: 'nc_exit.co!'},
+        {name: 'nc_exit.do!'},
+        {name: 'norton.in!'},
+        {name: 'packer.ex!'},
+        {name: 'packer.set'},
+        {name: 'paraview.ex!'},
+        {name: 'pct2dib.ex!'},
+        {name: 'playwave.ex!'},//+71
+        {name: 'q&aview.ex!'},//+72
+        {name: 'rbview.ex!'},
+        {name: 'readme.txt'},
+        {name: 'refview.ex!'},
+        {name: 'saver.ex!'},
+        {name: 'symcfg.bin'},
+        {name: 'telemax.da!'},
+        {name: 'telemax.ex!'},
+        {name: 'telemax.hl!'},
+        {name: 'telemax.in!'},
+        {name: 'telemax.nm!'},
+        {name: 'tif2dib.ex!'},
+        {name: 'tornado.ns!'},
+        {name: '4vector.ex!'},
+        {name: '3whats.new'},
+        {name: '2wpb2dib.ex!'},//+89
+        {name: '1wpv2wmf.ex!'},//+90
+        {name: '0wpview.ex!'},//+91
     ];
     let active = 0;
     let offset = 0;
     let pane = false;
     let paneLeft = {
-        items,
+        items:items.slice(0, 8),
         offset,
         active
     };
     let paneRight = {
-        items,
+        items:items.slice(8),
         offset,
         active
     };
@@ -202,12 +203,12 @@
             + '\u2554' + '\u2550'.repeat(38) + '\u2557'
             + ('\n' + '\u2551'
                 + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2502'
-                + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2502'
-                + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2551')
+                + '    <span class="yellowonblue">Имя</span>     \u2502'
+                + '    <span class="yellowonblue">Имя</span>     \u2551')
             + ('\u2551'
                 + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2502'
-                + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2502'
-                + '<span class="yellowonblue">C:\u2193 Имя</span>     \u2551')
+                + '    <span class="yellowonblue">Имя</span>     \u2502'
+                + '    <span class="yellowonblue">Имя</span>     \u2551')
 
             + rows.map(r =>
                 ('\n' + '\u2551'
