--- a/nc.html
+++ b/nc.html
@@ -4,7 +4,7 @@
     <style>
         @font-face {
             font-family: 'MyWebFont';
-            src: url('http://webdraft.hu/fonts/classic-console/fonts/clacon2.woff2') format('woff2');
+            src: url('clacon2.woff2') format('woff2');
         }
         * {
             background: #000;
